Opened 13 years ago

Closed 12 years ago

#8855 closed bug (fixed)

SAT: Tab stacked windows disappear

Reported by: mmadia Owned by: czeidler
Priority: normal Milestone: R1
Component: Add-Ons/Decorators/Default Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #8690
Platform: All

Description

hrev44483 gcc2h

Moving a stack of two windows across workspaces can make them invisisble or disappear completely (depending on how the move to another workspace was done).

To reproduce:

  • launch Workspaces and resize to a larger size (this makes it easier to visually locate where the invisible windows are.)
  • stack two applications together by their tabs
  • move the tabbed stacked windows to another workspace.
  • poof! the window should now be invisible.

Notes:

  1. using SHIFT + CTRL + CMD + <arrow keys> will not trigger this bug.
  2. using LeftMouseDown on the tab + CMD + Fn will trigger this bug.
    • The applications will become invisible.
    • Upon switching to another workspace, keep LeftMouseDown and move the invisble application around. Workspaces will show it moving around.
    • Using CMD+CTRL+LeftMouseDown , will allow you to move the application, but not make it visible.
    • If you're able to guess where the focused application tab is, you can make them reappear.
    • To gauge the location of the invisible windows, use LeftMouseDown to select a large area of the Desktop. The hole in the selection will indicate where the invisible applications are.
  3. using LeftMouseDown on the Workspaces will completely make the windows disappear.
    • I have not yet be able to figurs out a way to make them reappear. The only solution is to close the app and re-open it.

Change History (3)

comment:1 by anevilyak, 13 years ago

Component: Servers/app_serverAdd-Ons/Decorators/Stack And Tile

comment:2 by humdinger, 13 years ago

Blocking: 8690 added

(In #8690) Marking this as duplicate of #8855. Though I reported first, Matt's description is more detailed. :)

comment:3 by czeidler, 12 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev44782. Thanks!

Note: See TracTickets for help on using tickets.