Move stacked windows to a different workspace correctly.

When moving a window of a stacked window group to a different workspace all windows in the stack have to be moved. This fixes #8855.